--- a/Loading.html
+++ b/Loading.html
@@ -19,6 +19,6 @@
 
 <script>
 setTimeout(function() {
-    window.location.href = "Index.html";
+    window.location.href = "index.html";
 }, 4000);
 </script>
