--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
     <script>
         if (performance.navigation.type === 1) {
-      window.location.href = "loading.html";
+      window.location.href = "Loading.html";
     }
     </script>
   </body>
