--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
     </section>
 
     <script>
-
+      if (performance.navigation.type === 1) {
+    window.location.href = "Loading.html";
+  }
   </script>
 </body>
 </html>
